enabled internet access and added API integration to log page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sample-Compose-App</string>
+    <string name="api_key">857b075484929266031fa11e809254f4</string>
 </resources>
